# PomoApp

./: .gitignore  README.md  pyproject.toml
src/: hot_reload.py  main.py  pomodoro.kv  pomodoro.py
