[tool.poetry]
name = "PomoApp"
version = "0.1.0"
description = "Todo app made with Kivy."
authors = ["Afonso Medeiros <afonso.b.medeiros@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Kivy = "^2.1.0"
kivymd = "^1.0.2"
Cython = "^0.29.32"
buildozer = "^1.4.0"
watchdog = "^2.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
